--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1652,107 +1652,107 @@ stories:
   domain: http://www.heraldpalladium.com/
   link: https://www.heraldpalladium.com/news/wire/biden-s-new-endorsement-reflects-battle-for-latino-support/image_52928b94-177d-5cf5-8486-f04eab44b2f1.html
 images:
-- name: old-barn-old-barn-1500-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-diego-rivera1.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-- name: downtown-los-angeles-downtown-la-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-3.JPG
-- name: server-cloud-server-racks-clouds-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purple-storm.jpg
-- name: cannon-facing-cannon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
-- name: school-clouds-church-clouds-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-aqua.jpg
-- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
-- name: stories-carryload-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
-- name: berlinwall2-berlinwall-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
-- name: stories-new-68-113-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-113-800-500-0-max-0--1--1.jpg
-- name: old-house-oldhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-light-dali.jpg
-- name: stories-power-lines-empty-space-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-sunday.jpg
-- name: braceros-domingo-ulloa-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital_36728421355_o.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: oldhotel-oldhotel-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-wols.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-- name: bluelake-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-00-00.jpg
-- name: fence-mexico-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-deep-connections.jpg
-- name: bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: downtown-trucksilo-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
-- name: server-cloud-server-racks-door-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-3.jpg
-- name: bordercrossing-bordercrossing-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-plentiful.jpg
-- name: nazi-invasion-razor-wire-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-razor-wire-buildings.jpg
-- name: old-door-lock-old-door-lock-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-light-dali.jpg
-- name: nazi-invasion-DSC_0072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0072.jpg
-- name: power-lines-power-lines-empty-space-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kandinsky-bv.jpg
-- name: blossombar-green-zuma-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-50-62.jpg
-- name: curtain-curtain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
-- name: dc-statue-dcstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-2-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-rain.jpg
-- name: death-valley-death-valley-national-park-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-monet-one.jpg
-- name: art-museum-art-museum-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
-- name: stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-barn.jpg
-- name: copper-circuit-container-ship-in-seattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
-- name: school-clouds-church-clouds-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-free-woman.jpg
-- name: christianity-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit.jpg
-- name: adam-smith-adam-smith-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit.jpg
-- name: powerlines-power-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-yellow-collage.jpg
-- name: mediterranean-mediterranean-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-gan-vogh.jpg
-- name: white-house-whitehouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-colored-circuits.jpg
-- name: rockingchair-rockingchair-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-wols.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-- name: old-house-oldhouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sunday.jpg
-- name: nazi-invasion-soliders-fighting-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-soliders-fighting-statue.jpg
-- name: white-house-lawn-white-house-window-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
-- name: store-on-corner-oldcabin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kandinsky-bv.jpg
-- name: machine-road-machine-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-plentiful.jpg
-- name: old-granary-field-granaryfield.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield.jpg
-- name: window-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
+- name: border-fence-border-fence-on-hill-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-space-pizza.jpg
+- name: aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+- name: curtain-curtain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
+- name: hollywood-building-hollywood-building-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-dali.jpg
+- name: amusement-park-amusement-park-2-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
+- name: bf-skinner-san-francisco-wharf-clock.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-francisco-wharf-clock.jpg
+- name: meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+- name: subway-subway-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-oily-mcoilface.jpg
+- name: old-door-lock-old-door-lock-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-green-zuma.jpg
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: old-granary-field-granaryfield-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-wols.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-post-modern.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-post-modern.png
+- name: school-clouds-church-clouds-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-matrix.jpg
+- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+- name: copper-circuit-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-in-station-two-coming.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
+- name: blossombar-crafty-painting-file-00-00-50-12.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-12.jpg
+- name: bluelake-dark-soul-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-soul-file-00-00-00-00.jpg
+- name: locked-up-steam-lock-up-steam-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
+- name: art-museum-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-dali.jpg
+- name: bf-skinner-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-capital_36728420065_o.jpg
+- name: oldsmallboat-oldsmallboat-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dali-two.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
+- name: bordercrossing-bordercrossing-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
+- name: nyc-flag-api-conversations-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
+- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+- name: liberty-back-statue-liberty-back-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sand-paper.jpg
+- name: white-house-whitehouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
+- name: amusement-park-amusement-park-2-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit-2.jpg
+- name: paris-paris-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-deep-connections.jpg
+- name: birdhouse-birdhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
+- name: nazi-invasion-volkswagon-microbus-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-volkswagon-microbus-windows.jpg
+- name: razorwire-DSC-0080-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-pablo-blue.jpg
+- name: udnie-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7162.jpg
+- name: downtown-trucksilo-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
+- name: supreme-court-supremecourt-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
+- name: oldroad-old-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
+- name: christianity-christianity-under-construction-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-constitution.jpg
+- name: ellis-island-ellis-island-room-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-graham-sutherland.jpg
+- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: rain-princess-DSC_0017.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
+- name: christianity-christianity-under-construction-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-umberto-bocc.jpg
+- name: oldhotel-oldhotel-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-granite.jpg
+- name: blossombar-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-00-00.jpg
+- name: paris-paris-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alien-goggles.jpg
+- name: mosaic-face-mosaic-face-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
+- name: server-cloud-server-racks-door-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
+- name: server-cloud-server-racks-door-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
 ---
 Herbie Hancock Tribute At The Fox Theatre Show Preview.&nbsp;Ohio State, Maryland Load Up On National Signing Day.&nbsp;Help Make A Childs Wish Come True This Holiday Season.&nbsp;Fleur East To Spend Christmas In Paris.&nbsp;Man Pleads Not Guilty To Vandalizing California Synagogue.&nbsp;Heraclitus, The Wise Greek Was Correct.&nbsp;With Flu Widespread Across State, Alomere Health Restricts Visitors.&nbsp;Sunrail Train Hits Vehicle, Causing Delays In Maitland, Winter Park Area.&nbsp;
